apps/example-test-4/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-test-4
  namespace: dev
  labels:
    app: example-test-4
    backstage.io/kubernetes-id: example-test-4
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-test-4
  template:
    metadata:
      labels:
        app: example-test-4
        backstage.io/kubernetes-id: example-test-4
        environment: dev
    spec:
      containers:
        - name: example-test-4
          image: jaykumark7/example-test-4:1.0.1
          ports:
            - containerPort: 5000
