apps/example-test-4/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-test-4
  namespace: dev
  labels:
    backstage.io/kubernetes-id: example-test-4
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /example-test-4-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-test-4
                port:
                  number: 80
